--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	<h1>hello</h1>
+	
+		<h1>Current Tasks</h1>
+
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="/js/app.js"></script>
